<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userHint"
            android:inputType="text"
            android:textColorHighlight="#0D0D0E"
            android:textColorLink="#428ECA"
            android:textCursorDrawable="@color/colorAccent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passHint"
            android:inputType="textPassword"
            android:textColorHighlight="#070707"
            android:textColorLink="#031788"
            android:textCursorDrawable="@color/colorAccent" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#125B95"
            android:text="@string/login"
            android:textColor="#fff" />

    </LinearLayout>
</RelativeLayout>
